# torchforge-bench

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  methodology_challenge.md
.github/workflows/: audit.yml  baselines.yml  bench.yml  ci.yml
baselines/: README.md  dqn_cartpole.py  pyproject.toml
results/: README.md  neural_network_backend_comparison.md
results/ffi_overhead/: METHODOLOGY.md  pyo3_ffi_overhead.json
src/: ffi_overhead.rs  lib.rs  ndarray_prototype.rs
