[package]
name = "torchforge-bench"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
description = "ML benchmark suite for reproducing paper results in Rust — faster and leaner than Python references."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/torchforge-rs/torchforge-bench"
keywords = ["machine-learning", "benchmark", "reproducibility", "edge", "rust"]
categories = ["science", "development-tools"]

[dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize"] }
numpy = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Neural network backends for prototyping
ndarray = "0.16"
rand = "0.8"

[dev-dependencies]
# burn = { version = "0.14", features = ["train", "ndarray", "std"] }
# candle-core = "0.7"
# candle-nn = "0.7"
