[project]
name = "torchforge-baselines"
version = "0.1.0"
description = "Python baseline implementations for TorchForge benchmarks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "torch==2.4.0",
    "gymnasium[classic-control]==1.0.0",
    "numpy==1.26.0",
    "matplotlib==3.8.0",
    "tensorboard==2.17.0",
    "tqdm==4.66.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.0",
    "black==24.8.0",
    "ruff==0.6.0",
]
